samples/_failures_safe/1761294614_11e552_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be5da8bc.c: In function ‘print_token’:
./samples/SAFE/__tmp_be5da8bc.c:168:5: error: expected identifier or ‘(’ at end of input
  168 |     const char *
      |     ^~~~~
./samples/SAFE/__tmp_be5da8bc.c:168:5: error: expected declaration or statement at end of input
